# khuneo-core

./: CMakeLists.txt
include/kh-core/: types.h  utf8.h
kh-core/: types.h  utf8.c  utf8.h
src/: types.c  utf8.c
